# qwen-analogy-codec

./: .gitignore  LICENSE  MODEL_AVAILABILITY_REPORT.md  README.md  pyproject.toml
artifacts/: codec.json  codec.pkl  reps.pt  train_log.csv
docs/: original-poc2-instructions.md  qwen-analogy-codec-report.tex  sprint1-final-report.md
evidence/: accuracy_by_seed.csv  analogy_bootstrap.csv  analogy_summary.csv  axes_metrics.csv  confusion_matrix.csv  heldout_predictions.csv  layer_sweep.csv
experiments/: heldout_vocabulary.py  intervention.py  layer_sweep.py  loss_ablation.py
results/: heldout_vocabulary.csv  heldout_vocabulary.json  heldout_vocabulary_reps.pt  intervention.json  intervention_logprobs.csv  layer_sweep.csv  layer_sweep.json  loss_ablation.csv  loss_ablation.json
scripts/: extract_reps.py  generate_evidence_pack.py  train_codec.py  validate_gates.py
src/qwen_analogy_codec/: __init__.py  codec_io.py  evidence.py  extract.py  model_io.py  paths.py  train.py  validate.py
